tests/NormalTests/paczka1/fuzzy1/91271702.err
Error in line 3: 4ARAn9Ie S43 34,8
Error in line 6: S26 S665 60,7
Error in line 14: jj6Mr S26 21,2
Error in line 12: S26 S43 55,0
Error in line 18: 4ARAn9Ie S665 56,4
Error in line 23: oCqYt8Hvu S26 134,3
Error in line 22: S26 S925 32,3
